--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link href="./style.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="./src/img/favicon.png" type="image/x-icon">
     <title>Conversor de moedas com JavaScript puro</title>
   </head>
   <body class="bg-dark bg-gradient">
